[gd_scene load_steps=4 format=3 uid="uid://d1o02ict7qld1"]

[ext_resource type="Texture2D" uid="uid://d0h5rgv023tfx" path="res://art/Projectile.png" id="1_vfvuy"]
[ext_resource type="Script" path="res://projectile.gd" id="1_xw02t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8480h"]
radius = 18.0278

[node name="Projectile" type="Area2D" groups=["Bullet"]]
script = ExtResource("1_xw02t")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_vfvuy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -1)
shape = SubResource("CircleShape2D_8480h")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="enemy_hit" from="." to="." method="_on_enemy_hit"]
